--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ presage-store-sled = { git = "https://github.com/whisperfish/presage" }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
 tokio = { version = "1.42.0", features = ["rt", "sync"] }
+tokio-stream = { version = "0.1.17", default-features = false }
 
 [patch.crates-io]
 curve25519-dalek = { git = 'https://github.com/signalapp/curve25519-dalek', tag = 'signal-curve25519-4.1.3' }
