--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ presage = { git = "https://github.com/whisperfish/presage" }
 presage-store-sled = { git = "https://github.com/whisperfish/presage" }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.134"
-tokio = { version = "1.42.0", features = ["rt", "signal", "sync"] }
+tokio = { version = "1.42.0", features = ["fs", "io-util", "macros", "net", "rt", "rt-multi-thread", "signal", "sync", "time"] }
 tokio-stream = { version = "0.1.17", default-features = false }
 tokio-util = { version = "0.7.13", features = ["rt"] }
 
